--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,11 +24,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Docker login
-        env: 
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: | 
-          docker login -u DOCKER_USER -p "DOCKER_PASSWORD"
+          docker login -u ${{ secrets.DOCKER_USER }} -p "${{ secrets.DOCKER_PASSWORD }}"
 
       # Runs a set of commands using the runners shell
       - name: Build image
